# UC3M-PIC

./: .gitignore  .readthedocs.yaml  README.md  dist_package.sh  pyproject.toml  sync_public.sh
docs/: create_docs.sh
docs/source/: api.rst  colab.rst  conf.py  config.rst  credentials.rst  index.rst  install.rst  utils.rst
notebooks/: 00.ipynb  01.ipynb  02.ipynb  02_prev.ipynb  03.html  03.ipynb  1_introduccion.ipynb  2_CNN.ipynb  Untitled-1.ipynb
test/: test.py
uc3m_pic/: __init__.py  eval.py  utils.py
uc3m_pic/pyarmor_runtime_000000/: __init__.py
uc3m_pic/pyarmor_runtime_000000/windows_x86_64/: pyarmor_runtime.pyd
