[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uc3m-pic"
version = "0.1.0"
authors = [
    {name="ramajoballester", email="aramajo@ing.uc3m.es"},
]
description = "Helper package for UC3M PIC course"
readme = "README.md"
# requires-python = ">=3.8,<3.10"
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.7",
    # "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

keywords = [
    "python",
    "pytorch",
    "deep-learning",
    "computer-vision",
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy",
    "matplotlib",
    "tqdm",
    "opencv-python",
    "ipykernel",
    "torchsummary",
    "gspread",
    "google-api-python-client",
    "thop",
    "wandb",
    "torchmetrics",
    "scipy",
    "scikit-learn",
    "IProgress",
    "notebook"
]

[project.optional-dependencies]
dev = [
    "pyarmor",
    "git-filter-repo",
    # "xelatex"
]
test = [

]

[tool.setuptools.packages]
# find = {include = ["uc3m_pic"]}
find = {namespaces = false, exclude = ["test"]}

[project.urls]
"Homepage" = "https://github.com/ramajoballester/UC3M-PIC"
"Bug Tracker" = "https://github.com/ramajoballester/UC3M-PIC/issues"